--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Braess Paradox New York</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="http://bootswatch.com/lumen/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="https://bootswatch.com/lumen/bootstrap.min.css">
     <style type="text/css">
         h2,h3 {
             text-align: center;
@@ -30,7 +30,7 @@
         </div>
         <br/>
         <h3>Graph Vizualization</h3>
-        <iframe width="900" height="800" frameborder="0" scrolling="no" src="http://plot.ly/~philipslan/1.embed?share_key=k00v32hUNlJzIA94jGRTye"></iframe>
+        <iframe width="900" height="800" frameborder="0" scrolling="no" src="https://plot.ly/~philipslan/1.embed?share_key=k00v32hUNlJzIA94jGRTye"></iframe>
     </div>
 </body>
 </html>
