--- a/map.html
+++ b/map.html
@@ -4,7 +4,7 @@
     <title>Map of New York</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="http://bootswatch.com/lumen/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="https://bootswatch.com/lumen/bootstrap.min.css">
     <style>
         /* Always set the map height explicitly to define the size of the div
         * element that contains the map. */
